<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.milton</groupId>
    <artifactId>milton</artifactId>
    <version>4.0.1.1855</version>
    <packaging>pom</packaging>
    <name>milton</name>
    <description>With Milton WebDAV Server Library for Java you can create your own WebDAV server, add WebDAV support to
        your existing Java project or DAV-enable your CMS/DMS/CRM.
    </description>
    <url>http://milton.io</url>
    <licenses>
        <license>
            <name>Milton Software License</name>
            <url>https://milton.io/media/2123/milton-license-agreement.rtf</url>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git@github.com:miltonio/milton2.git</connection>
        <url>http://github.com/miltonio/milton2/tree/master</url>
    </scm>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    <developers>
        <developer>
            <name>Brad McEvoy</name>
            <timezone>GMT+12</timezone>
        </developer>
    </developers>
    <properties>
        <servlet.version>6.0.0</servlet.version>
        <mime-util.version>2.1.3</mime-util.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <easy-mock.version>5.0.1</easy-mock.version>
        <netbeans.hint.license>apache20</netbeans.hint.license>
    </properties>

    <organization>
        <name>McEvoy Software Ltd</name>
        <url>http://www.mcevoysoftware.co.nz/</url>
    </organization>
    <modules>
        <module>milton-api</module>
        <module>milton-server-ce</module>
        <module>milton-server-ent</module>
        <module>milton-client</module>
        <module>milton-proxy</module>
        <module>milton-mail-api</module>
        <module>milton-mail-server</module>
    </modules>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <fork>true</fork>
                    <useIncrementalCompilation>true</useIncrementalCompilation>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doclint>none</doclint>
                    <additionalJOptions>
                        <additionalJOption>--add-exports</additionalJOption>
                        <additionalJOption>java.naming/com.sun.jndi.ldap=ALL-UNNAMED</additionalJOption>
                    </additionalJOptions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>${GPG_PATH}</executable>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.13</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-webdav</artifactId>
                <version>1.0-beta-2</version>
            </extension>
        </extensions>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>2.3</version>
            </plugin>
        </plugins>
    </reporting>

    <dependencies>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>${servlet.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.5</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <scope>test</scope>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.5</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>jdk-17-config</id>
            <activation>
                <jdk>17</jdk>
            </activation>
            <properties>
                <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
            </properties>
        </profile>
    </profiles>
</project>
